<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/action_refresh"
    android:icon="@drawable/ic_cached_white_24dp"
    android:title="@string/mainMenu_refresh"
    app:showAsAction="ifRoom">
  </item>
  <group
    android:id="@+id/menu_group_selected"
    android:checkableBehavior="single">
    <item
      android:id="@+id/action_rated"
      android:orderInCategory="1"
      android:title="@string/mainMenu_topRated"/>
    <item
      android:id="@+id/action_popularity"
      android:orderInCategory="2"
      android:title="@string/mainMenu_mostPopular"/>
    <item
      android:id="@+id/action_favourite"
      android:orderInCategory="2"
      android:title="@string/mainMenu_favourite"/>
  </group>
</menu>
